--- a/Templates/base.html
+++ b/Templates/base.html
@@ -171,7 +171,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="/UserManager/user" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p><font size="2">用户管理</font></p>
                 </a>
